--- a/3-botblog.html
+++ b/3-botblog.html
@@ -111,7 +111,14 @@
 
 					<p>Jack was pale under his freckles but Chief Dalton grinned back at me. &#8220;We&#8217;ll be right behind you, Morrison,&#8221; he said.</p>
 
-					<p>Behind me! So they could pick up the pieces. I gave them a cocky smile and switched on the engine, full speed.</p>
+                    <p>Behind me! So they could pick up the pieces. I gave them a cocky smile and switched on the engine, full speed.</p>
+                    
+                    <div class="figure">
+                        <p>
+                            <img src="3-botblog-img/figbot.jpg" alt="Bot Image"/>
+                            <b class="figcaption"> Lo, the robot walks</b>
+                        </p>
+                    </div>
 
 					<p>Carron City is about a mile from the plant. It has about fifty thousand inhabitants. At that moment, though, there wasn&#8217;t a soul in the streets. I heard people calling to each other inside their houses, but I didn&#8217;t see anyone, human or android. I circled in for a landing, the Police Copter hovering maybe a quarter of a mile back of me. Then, as the wheels touched, half a dozen androids came around the corner. They saw me and stopped, a couple of them backing off the way they had come. But the biggest of them turned and gave them some order that froze them in their tracks, and then he himself wheeled down toward me.</p>
 
